# bereal-tg

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
bot/: config.py  handlers.py  main.py  scheduler.py  storage.py
