[project]
name = "bereal-bot"
version = "0.1.0"
description = "BeReal-style Telegram bot for group chats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "aiohttp-socks>=0.11.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["bot"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "data",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "PTH",
    "PL",
    "RUF",
]

ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "EM101",
    "EM102",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
